add food choices to the main page, and fixed some bugs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,7 +66,7 @@
 
 }
 .navBorder {
-    background-color: red;
+    background-image: linear-gradient(to right, #fe0613 , #8b00ae);
     height: 2px;
 
 }
@@ -109,6 +109,7 @@
     margin-top: 12%;
     margin-bottom: 0;
     padding : 0;
+    color: black;
 }
 #searchText2{
     position: absolute;
@@ -225,7 +226,7 @@
     background-color: transparent;
     border-collapse: separate;
     border-spacing: 123px 10.5px;
-    margin-top: 20px;
+    padding-top: 18px;
     border-top: 2%;
     color: #A9A9A9;
 
@@ -578,18 +579,18 @@
     position: absolute;
     max-width: 800px;
     display: grid;
-    /*grid-column-gap: 1px;*/
+    grid-column-gap: 25px;
+
     grid-template-columns: auto auto auto auto;
     margin-left: 0%;
-    margin-top:0%;
+    margin-top:4%;
     margin-right:10%;
     background-color:white;
     
 }
 
-
 .foodItem {
-    width: 250px;
+    width:  px;
     height: 250px;
     margin: 0%;
     border: 0%;
@@ -637,3 +638,69 @@
     
     margin-top: -7%;
 }
+
+/*more foods*/
+
+.p4{
+    font-size: 25px;
+    position: relative;
+    margin :0;
+    margin-right: 40%;
+    margin-top: 26%;
+    color: #414040;
+}
+.more_foods_grid {
+    position: absolute;
+    max-width: 1000px;
+    display: grid;
+
+    grid-template-columns: 120px 120px 120px 120px 120px 120px 120px 120px;
+    margin-left: 0%;
+    margin-top:2%;
+    margin-right:13%;
+    
+    background-color:transparent;
+    
+}
+
+.item {
+    width: 150px;
+    height: 60px;
+    margin: 0%;
+    border: 0%;
+    padding: 0%;
+    margin-top:15%;
+    font-size: 18px;
+    text-align: center;
+    cursor:pointer;
+    background-color: transparent;
+    border-radius:15px;
+    border : 2px solid sliver;
+}
+
+
+.foodButton {
+    width: 100px;
+    display:inline-block;
+    cursor:pointer;
+    color: black;
+    font-size:15px;
+    padding:10px 2px;
+    margin-block-start: 8%;
+    text-decoration: none;
+    font-weight: bold;
+    box-shadow: 0px 0px 20px 1px rgb(240, 240, 240);
+    background-color:rgb(265, 265, 265);;
+    border-radius: 15px;
+}
+.foodButton:hover {
+    -webkit-box-shadow: 1px 1px 10px 4px rgba(220, 220, 220);
+    -moz-box-shadow: 1px 1px 10px 4px rgba(220, 220, 220);
+    box-shadow: 1px 1px 10px 5px rgb(220, 220, 220);
+}
+
+.foodButton :active {
+    position:relative;
+}
+
+/*footer*/
