--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,8 +5,9 @@ body {
     margin: 0;
     padding: 0;
     text-align: float;
-    background-color: #fafafa;
+    background-color: rgb(251,251,251);
     margin-block-start: 1%;
+    color: #414040;
 
 
 }
