--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,14 +1,16 @@
 
+
+*{
+	font-family: 'shabnam',sans-serif;
+}
 body {
 
-	font-family: 'Shabnam', sans-serif;
     margin: 0;
     padding: 0;
     text-align: float;
     background-color: rgb(251,251,251);
     margin-block-start: 1%;
     color: #414040;
-    
 
 
 }
