--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,9 +125,10 @@
     display: grid;
     grid-template-columns: auto auto auto;
     margin-top: 10%;
-
+    right:2%;
+    position: relative;
     padding-bottom: 10px;
-    width:  750px;
+    width:  780px;
     height: 70px;
     border: 1px solid #dfdfdf;
     background-color: #ffffff;
@@ -141,34 +142,60 @@
     float: left;
     position: relative;
     background-color: white;
-    border-radius: 5px;
-    margin-left: 54%;
-    margin-top: 2.5%;
-    border-color: silver;
-    width: 150px;
-    height: 60px;
+    border-radius: 10px;
+    margin-left: 55%;
+    margin-top: 3%;
+    border-style: none;
+    text-decoration-color: black;
+    /*border-color: silver;*/
+    width: 145px;
+    height: 55px;
     font-size: 15px;
+    border: 0.5px solid silver ;
+
+}
+.selectBar::placeholder{
+    position: relative;
+    color:black;
+    padding-right:40%;
+
+}
+ .selectBarIcon{
+    color: black;
+    position: relative;
+    top: 40%;
+    right: 10%;
+    font-size: 15px;
+
 }
 
+/*.selectBar::-webkit-input-placeholder { 
+  color: black;
+  position: relative;
+  left: : -10.1px;
+  align-content: left;
+  float: center;
+  padding-left: :10px;
+}*/
 
 .inner-addon { 
     position: absolute; 
     float: left;
     color:silver;
-    margin-right:11.5%;
-    margin-top: 0.7%;
-    width : 350px;
+    margin-right:21.5%;
+    margin-top: 1.4%;
+    width : 356px;
     height: 60px;
 }
 
 .inner-addon .fa-map-marker-alt{
   position: absolute;
   float: left;
-  font-size: 20px;
+  font-size: 25px;
   color: #DCDCDC;
   background-color: transparent;
-  padding-top: 24px;
-  padding-right:15px;
+  padding-top: 10px;
+  padding-right:12px;
   pointer-events: none;
 }
 
@@ -177,15 +204,34 @@
     float: left;
     padding-right: 11%;
     font-size: 15px;
-    width : 490px;
+    width : 500px;
     height: 55px;
     border-radius:0 10px 10px 0px;
     border-style: none;
-    border: 0.5px solid ;
+    border: 0.5px solid silver ;
 
 
 }
+/*.SearchInput:after{
+            content: '';
+            display: block;
+            position: absolute;
+            width: 1000000px;
+            top: 0px;
+            left: 0px;
+            border: 5px solid red;
 
+}
+*/
+#topSearchBar{
+    position: absolute;
+    color: #383838;
+    top : 3%;
+    right: 23.3%;
+    font-size: 10px;
+    padding-left: 20px;
+    background-color: white;
+}
 
 #searchIcon {
     position: absolute;
@@ -195,15 +241,15 @@
     margin: 0%;
     border: 0%;
 
-    padding-right: 151%;
+    padding-right: 151.81%;
 
 }
 #lastSearchedItem{
 
     position: absolute;
     float: right; 
-    margin-top: 6.3%;
-    margin-right: -23%;
+    margin-top: 11.3%;
+    margin-right: -46%;
     /*margin-left: 80%;*/
     font-size: 13px;
     color: gray;
@@ -216,9 +262,9 @@
   float: left;
   font-size: 11px;
   background-color: transparent;
-  padding-top: 6.5%;
+  padding-top: 11.5%;
   text-decoration :underline;
-  margin-right:-24%;
+  margin-right:-46.8%;
   color: gray;
   pointer-events: none;
 }
