--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -562,6 +562,10 @@
 }
 
 
+.best_restuarnats_grid a {
+    text-decoration: none;
+}
+
 .restItem {
     width: 90px;
     height: 120px ;
@@ -576,7 +580,7 @@
     font-size: 18px;
     text-align: center;
     cursor:pointer;
-
+    text-decoration: none;
 }
 
 .restItem img{
@@ -590,8 +594,13 @@
     position: relative;
     color: #414040;
     font-size: 12px;
+    text-decoration: none;
 
 
+}
+
+.restItem_p{
+    text-decoration: none;
 }
 
 .restItem:hover img{
@@ -649,6 +658,7 @@
     font-size: 18px;
     text-align: center;
     cursor:pointer;
+    text-decoration: none;
 }
 
 
