--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -23,13 +23,26 @@ body{
 
 #login-register{
 	width: 100%;
-	height: 50px;
+	height: 43px;
 	position: relative;
 	top: 6px;
-	border-bottom-color: #eaeaea;
-	border-bottom-style: solid;
-	border-bottom-width: 1.5px;	
+	/*border-bottom-color: #eaeaea;*/
+	/*border-bottom-style: solid;*/
+	/*border-bottom-width: 1.5px;	*/
 	/*text-align: center;*/
+}
+
+#inputs_reg {
+	position: relative;
+	background-color: #e8e5e6;
+	height: 500px;
+	width: 100%;
+	top: -67px;
+	text-align: center;
+	direction: rtl;
+	  opacity: 1;
+  transition: opacity 1s; 
+
 }
 
 .link:visited{
@@ -45,14 +58,22 @@ body{
 #login{
 	position: relative;
 	right: 42%;
-	color: #db1a67;
+	/*color: #db1a67;*/
 	height: 100%;
+	margin-top: 0.5%;
+	top: 0%;
 	width: 90px;
 	text-decoration: none;
 	border-bottom-color: #db1a67;
 	border-bottom-style: solid;
 	border-bottom-width: 1.5px;	
 }
+
+/*#login:hover{
+		border-bottom-color: #db1a67;
+	border-bottom-style: solid;
+	border-bottom-width: 1.5px;	
+}*/
 
 #loginLogo {
 	position: relative;
@@ -62,6 +83,12 @@ body{
 	margin-left: 10px;
 	margin-right: 15px;
 }
+
+/*#loginlogo :hover{
+	border-bottom-color: #db1a67;
+	border-bottom-style: solid;
+	border-bottom-width: 1111.5px;	
+}*/
 
 #register{
 	position: relative;
@@ -80,12 +107,12 @@ body{
 	margin-right: 5px;
 }
 
-#inputs {
+#inputs_log {
 	position: relative;
 	background-color: #e8e5e6;
-	height: 400px;
+	height: 500px;
 	width: 100%;
-	top: -60px;
+	top: -62px;
 	text-align: center;
 	direction: rtl;
 }
@@ -93,26 +120,41 @@ body{
 .p1{
 	color: gray;
 	font-size: 14px;
+	right: 1%;
 	position: relative;
 	top: 50px;
-	margin-top: 10px;
+	margin-top: 19px;
 }
 
 .input-border{
 	position: relative;
 	top: 100px;
-	right: 440px;
+	right: 500px;
+	background-color: white;
+	border-style: solid;
+	border-width: 0px;
+	border-color: lightgray;
+	height: 40px;
+	width: 500px;
+	margin-top: 20px;
+
+}
+
+.input-border_reg{
+	position: relative;
+	top: 100px;
+	right: 500px;
 	background-color: white;
 	border-style: solid;
 	border-width: 0.5px;
 	border-color: lightgray;
 	height: 40px;
 	width: 500px;
-	margin-top: 10px;
+	margin-top: 20px;
 
 }
 
-#email{
+#email_login{
 	/*position: relative;*/
 	height: 33px;
 	width: 460px;
@@ -122,11 +164,11 @@ body{
 	font-size: 14px;
 }
 
-#email:focus{
+#email_login:focus{
 	outline: none;
 }
 
-#emailLogo{
+#emailLogo_logo{
 	width: 25px;
 	height: 25px;
 	position: relative;
@@ -146,6 +188,27 @@ body{
 #password:focus{
 	outline: none;
 }
+#userLogo{
+	width: 25px;
+	height: 25px;
+	position: relative;
+	top: 10px;
+}
+
+
+#user{
+	/*position: relative;*/
+	height: 33px;
+	width: 460px;
+	/*right: 1%;*/
+	/*margin-top: 100px;*/
+	border-style: none;
+	font-size: 14px;
+}
+
+#user:focus{
+	outline: none;
+}
 
 #keyLogo{
 	width: 20px;
@@ -154,17 +217,52 @@ body{
 	position: relative;
 	top: 7px;
 }
+#phoneLogo{
+	width: 15px;
+	height: 15px;
+	margin-left: 0px;
+	right: -7px;
+	position: relative;
+	top: 7px;
+}
+
+#phonenumber-email{
+	width: 400px;
+	height: 40px;
+	position: relative;
+	right: 500px;
+	top: 110px;
+}
+
+#phone-number{
+	width: 240px;
+	height: 40px;
+	background-color: white;
+	border-style: solid;
+	border-width: 0.5px;
+	border-color: lightgray;
+}
 
 #forget{
 	float: right;
 	position: relative;
-	right: 31%;
+	right: 41%;
 	top: 100px;
 	font-size: 10px;
 	color: #5d74c6;
 	margin-top: 10px;
 	outline-style: none;
 	text-decoration: none;
+}
+#pn{
+	width: 180px;
+	height: 33px;
+	border-style: none;
+	font-size: 14px;
+}
+
+#pn:focus{
+	outline: none;
 }
 
 #login-button{
@@ -182,6 +280,8 @@ body{
 	right: 550px;
 	box-shadow: none;
 }
+
+
 
 #login-button:focus{
 	outline: none;
@@ -232,7 +332,7 @@ body{
 #menu{
 	position: relative;
 	right: 150px;
-	top: 30px;
+	top: 20px;
     width: 80%;
     direction: rtl;
     font-size: 14px;
@@ -243,6 +343,12 @@ body{
     list-style-type: none;
 }
 
+#e{
+	width: 180px;
+	height: 33px;
+	border-style: none;
+	font-size: 14px;
+}
 .item{
     display: inline-block;
     color: darkgrey;
