--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -19,7 +19,7 @@ body{
     margin-top:  0%;
     margin-right: 48%;*/
 }
-
+		
 #login-register{
 	width: 100%;
 	height: 50px;
@@ -27,28 +27,40 @@ body{
 	top: 6px;
 	border-bottom-color: #eaeaea;
 	border-bottom-style: solid;
-	border-bottom-width: 1.5px;	
+	/*border-bottom-width: 1.5px;	*/
 	/*text-align: center;*/
 }
 
 .link:visited{
 	color: gray;
 	text-decoration: none;
-}
+}	
 
 .link{
 	color: gray;
 	text-decoration: none;
 }
 
+
 #login{
 	position: relative;
 	right: 42%;
-	color: gray;
+	/*color: #db1a67;*/
 	height: 100%;
+	margin-top: 0.5%;
+	top: 0%;
 	width: 90px;
 	text-decoration: none;
+	border-bottom-color: #db1a67;
+	border-bottom-style: solid;
+	border-bottom-width: 1.5px;	
 }
+
+/*#login:hover{
+		border-bottom-color: #db1a67;
+	border-bottom-style: solid;
+	border-bottom-width: 1.5px;	
+}*/
 
 #loginLogo {
 	position: relative;
@@ -56,19 +68,24 @@ body{
 	height: 20px;
 	top: 10px;
 	margin-left: 10px;
-	margin-right: 5px;
+	margin-right: 15px;
+	color: black;
 }
 
+/*#loginlogo :hover{
+	border-bottom-color: #db1a67;
+	border-bottom-style: solid;
+	border-bottom-width: 1111.5px;	
+}
+	*/
 #register{
 	position: relative;
 	right: 50%;
 	top: -115%;
 	height: 100%;
 	width: 90px;
-	color: #db1a67;
-	border-bottom-color: #db1a67;
-	border-bottom-style: solid;
-	border-bottom-width: 1.5px;	
+	color: red;
+	
 }
 
 #registerLogo {
@@ -77,9 +94,24 @@ body{
 	height: 30px;
 	top: 10px;
 	margin-right: 5px;
+
 }
 
-#inputs {
+ /*#register :hover {
+	border-bottom-color: #db1a67;
+	border-bottom-style: solid;
+	border-bottom-width: 1.5px;	
+
+ }*/
+/*#registerLogo {
+	position: relative;
+	width: 30px;
+	height: 30px;
+	top: 10px;
+	margin-right: 5px;
+}*/
+
+#inputs_reg {
 	position: relative;
 	background-color: #e8e5e6;
 	height: 500px;
@@ -93,7 +125,7 @@ body{
 	color: gray;
 	font-size: 14px;
 	position: relative;
-	top: 50px;
+	top: 55	px;
 	margin-top: 10px;
 }
 
@@ -168,6 +200,30 @@ body{
 #pn:focus{
 	outline: none;
 }
+
+
+#email_log{
+	/*position: relative;*/
+	height: 33px;
+	width: 460px;
+	/*right: 1%;*/
+	/*margin-top: 100px;*/
+	border-style: none;
+	font-size: 14px;
+}
+
+#email_log:focus{
+	outline: none;
+}
+
+#emailLogo_logo{
+	width: 25px;
+	height: 25px;
+	position: relative;
+	top: 10px;
+}
+
+
 
 #email{
 	position: relative;
